fixing alignment

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ h2 {
 h3 {
     font-size: 20px;
     border-bottom: 2px solid black; 
-    margin: 35px 20px 5px 20px;
+    margin: 21px 20px 5px 20px;
     padding: 10px 0 5px 0;
     font-family: 'Rock Salt', cursive;
 }
@@ -129,7 +129,7 @@ section > img {
     vertical-align: top;
     width: 30%;
     margin-left: 20px;
-    padding: 13px 0 10px 0;
+    padding: 5px 0 10px 0;
     text-align: center;
     background-color: white;
 
